--- a/GamepadMidi/packages.config
+++ b/GamepadMidi/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibUsbDotNet" version="2.2.29" targetFramework="net472" />
   <package id="midi-dot-net2" version="2.0.1" targetFramework="net472" />
 </packages>
